Fixed errors related to cors